--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A Ginko Bus app for teaching purposes.">
     <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico">
     <meta name="author" content="Fred Dadeau">
-        
+    <link rel="manifest" href="/path/to/manifest.json">
     <!-- https://developers.google.com/web/fundamentals/design-and-ux/browser-customization/ -->
     <meta name="theme-color" content="#000000">
     <meta property="og:image" content="icons/icon-512.png">
